# 2025-02-hacknight-bootstrap

./: .gitignore  README.md
01_github_issue_cleanup_agent/: .env  agent.py  custom_tools.py  issue_impact.py  pyproject.toml
tools/issue-cleanup/: issue_cleanup.py  pocket.json
tools/list-issues/: list_issues.py  pocket.json  requirements.txt
