[project]
name = "01_github-issue-cleanup-agent"
version = "0.1.0"
description = "github issue cleanup agent"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "hyperpocket-langchain>=0.4.0",
    "hyperpocket[standard]>=0.4.0",
    "langchain-openai>=0.3.6",
    "python-dotenv>=1.0.1",
]
